@@ -1,27 +1,50 @@
 plugins {
     id 'java'
+    id 'maven-publish'
+    id("com.gradleup.shadow") version "9.0.0-beta8"
 }
 
+apply plugin: 'java'
+
 group = 'dev.lorenz'
-version = '1.0-SNAPSHOT'
+version = "1.0.0"
+
+def group = 'dev.lorenz.crates'
+def artifact = 'crates'
+
+java {
+    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['--enable-preview']
+    options.release = 21
+}
 
 repositories {
     mavenCentral()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
-    maven { url = uri("https://repo.codemc.io/repository/maven-releases/") }
-
-    maven { url = uri("https://repo.codemc.io/repository/maven-snapshots/") }
+    maven { url ("https://repo.codemc.io/repository/maven-releases/") }
+    maven { url ("https://repo.codemc.io/repository/maven-snapshots/") }
+    maven{
+        url = "https://repo.codemc.io/repository/maven-public/"
+    }
     maven { url 'https://repo.extendedclip.com/releases/' }
     maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/'}
-    maven { url 'https://jitpack.io' }
+    maven {
+        url = "https://jitpack.io/"
+    }
     maven { url "https://repo.dmulloy2.net/repository/public/" }
-
-
 }
 
 dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.36'
+    annotationProcessor 'org.projectlombok:lombok:1.18.36'
     compileOnly 'org.spigotmc:spigot-api:1.21-R0.1-SNAPSHOT'
 
     implementation 'io.github.revxrsal:lamp.common:4.0.0-rc.10'
@@ -29,35 +52,37 @@ dependencies {
     implementation "dev.dejvokep:boosted-yaml:1.3.6"
     compileOnly 'me.clip:placeholderapi:2.11.6'
     implementation 'com.zaxxer:HikariCP:5.1.0'
-    compileOnly 'com.github.decentsoftware-eu:decentholograms:2.9.3'
+    compileOnly 'com.github.decentsoftware-eu:decentholograms:2.9.4'
     compileOnly("com.github.retrooper:packetevents-spigot:2.8.0")
-
-
 }
 
-def targetJavaVersion = 21
-java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    sourceCompatibility = javaVersion
-    targetCompatibility = javaVersion
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+tasks {
+    compileJava {
+        dependsOn clean
+        options.encoding = 'UTF-8'
+    }
+
+    build {
+        dependsOn shadowJar
+        dependsOn publish
     }
 }
 
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = 'UTF-8'
-
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        options.release.set(targetJavaVersion)
-    }
+tasks.named('shadowJar') {
+    archiveClassifier.set('')
 }
 
-processResources {
-    def props = [version: version]
-    inputs.properties props
-    filteringCharset 'UTF-8'
-    filesMatching('plugin.yml') {
-        expand props
+tasks.build {
+    dependsOn tasks.shadowJar
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = group
+            artifactId = artifact
+
+            from components.java
+        }
     }
 }
